--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,22 +12,24 @@
 
  :root {
   /* colors */
-  --link-color: #035fe6;
-  --link-hover-color: #136ff6;
+  --link-color: #1473e6;
+  --link-hover-color: #0d66d0;
   --background-color: #fff;
   --overlay-background-color: #eee;
   --highlight-background-color: #ccc;
   --text-color: #000;
+  --text-color-light: #6e6e6e;
 
   /* fonts */
-  --body-font-family: 'helvetica neue', helvetica, ubuntu, roboto, noto, sans-serif;
+  --body-font-family: 'Adobe Clean', 'adobe-clean', 'helvetica neue', helvetica, ubuntu, roboto, noto, sans-serif;
   --heading-font-family: var(--body-font-family);
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
   /* body sizes */
   --body-font-size-m: 22px;
   --body-font-size-s: 18px;
-  --body-font-size-xs: 16px;
+  --body-font-size-xs: 14px;
+  --body-font-size-xxs: 12px;
 
   /* heading sizes */
   --heading-font-size-xxl: 48px;
@@ -35,7 +37,8 @@
   --heading-font-size-l: 32px;
   --heading-font-size-m: 24px;
   --heading-font-size-s: 20px;
-  --heading-font-size-xs: 18px;
+  --heading-font-size-xs: 16px;
+  --heading-font-size-xxs: 12px;
 
   /* nav height */
   --nav-height: 64px;
@@ -113,7 +116,7 @@ a.button:any-link, button {
   box-sizing: border-box;
   text-decoration: none;
   border: 2px solid transparent;
-  padding: 5px 30px;
+  padding: 3px 14px 5px;
   text-align: center;
   font-style: normal; 
   font-weight: 600;
@@ -140,7 +143,7 @@ button:disabled, button:disabled:hover {
 a.button.secondary, button.secondary {
   background-color: unset;
   border: 2px solid currentcolor;
-  color: var(--text-color)
+  color: var(--text-color-light)
 } 
 
 
@@ -210,16 +213,7 @@ main img {
   }  
 }
 
-@media (min-width: 900px) {
-  :root {
-    --heading-font-size-xxl: 60px;
-    --heading-font-size-xl: 48px;
-    --heading-font-size-l: 36px;
-    --heading-font-size-m: 30px;
-    --heading-font-size-s: 24px;
-    --heading-font-size-xs: 22px;  
-  }
-  
+@media (min-width: 900px) {  
   .section > div {
     max-width: 1200px;
     margin: auto;
