--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,7 +42,12 @@
 
   /* nav height */
   --nav-height: 64px;
+  --footer-height: 110px;
 
+}
+
+main {
+  min-height: calc(100vh - var(--nav-height) - var(--footer-height));
 }
 
 body {
