--- a/blocks/banner/banner.css
+++ b/blocks/banner/banner.css
@@ -27,8 +27,12 @@ main .banner a.button {
     margin: 2px 0;
 }
 
+main .banner.banner-2-cols .banner-body {
+    max-width: 50%;
+}
 
-main .banner picture {
+
+main .banner.banner-2-cols picture {
     position: absolute;
     z-index: -1;
     top: 0;
@@ -38,9 +42,40 @@ main .banner picture {
     box-sizing: border-box;
 }
 
-main .banner img {
+main .banner.banner-2-cols img {
     object-fit: contain;
     width: 100%;
     height: 100%;
     object-position: right;
+}
+
+main .banner.banner-3-cols {
+    padding: 0;
+    border-radius: 8px;
+    border-color: var(--highlight-background-color);
+}
+
+main .banner.banner-3-cols > div {
+    display: flex;
+    align-items: center;
+}
+
+main .banner.banner-3-cols img {
+    height: 147px;
+}
+
+main .banner.banner-3-cols .banner-image {
+    line-height: 0;
+    flex: 0 0 auto;
+}
+
+
+main .banner.banner-3-cols .banner-cta {
+    flex: 0 0 auto;
+    padding: 16px 32px;
+}
+
+main .banner.banner-3-cols .banner-body {
+    flex: 1 1 200px;
+    padding: 16px 32px;
 }
